# tario

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/read/: error.rs  mod.rs  tests.rs
src/shared/: block.rs  buffer.rs  mod.rs  slices.rs  state.rs  test.rs
src/write/: error.rs  mod.rs  tests.rs
